@@ -5,8 +5,8 @@ import com.app.emolist.GUI.TaskPanelController;
 import javafx.scene.control.CheckBox;
 import javafx.scene.control.ListCell;
 import javafx.scene.control.ListView;
-
-import java.time.LocalDate;
+import java.util.List;
+import java.util.stream.Collectors;
 
 public class TaskViewHelper {
 
@@ -31,52 +31,65 @@ public class TaskViewHelper {
                 super.updateItem(task, empty);
                 if (empty || task == null) {
                     setGraphic(null);
-                } else {
-                    String text = task.getTitle();
-                    if (task.getDeadline() != null && task.getDeadline().isBefore(LocalDate.now().plusDays(500))) {
-                        text += " (" + task.getDeadline() + ")";
-                    }
-
-
-                    CheckBox checkBox = new CheckBox(text);
-                    checkBox.setSelected(task.isCompleted());
-                    checkBox.setOnAction(e -> {
-                        task.setCompleted(checkBox.isSelected());
-                        controller.refreshTaskViews();
-                        controller.updatePanels();
-
-                        if (controller.getCalendarController() != null) {
-                            controller.getCalendarController().refreshCalendarView();
-                        }
-                    });
-
-                    setGraphic(checkBox);
+                    return;
                 }
 
+                // 取得原始任務物件（用 ID 比對）
+                Task actualTask = controller.getTaskManager().getAllTasks().stream()
+                        .filter(t -> t.getId().equals(task.getId()))
+                        .findFirst()
+                        .orElse(task); // 如果找不到就用目前這個（但通常會找到）
+
+                String text = actualTask.getTitle();
+                if (actualTask.getDeadline() != null) {
+                    text += " (" + actualTask.getDeadline() + ")";
+                }
+
+                CheckBox checkBox = new CheckBox(text);
+                checkBox.setSelected(controller.getSelectedTasks().contains(actualTask));
+
+                checkBox.setOnAction(e -> {
+                    if (checkBox.isSelected()) {
+                        controller.getSelectedTasks().add(actualTask);
+                    } else {
+                        controller.getSelectedTasks().remove(actualTask);
+                    }
+                });
+
+                setGraphic(checkBox);
             }
         };
     }
+
 
     public void refreshTaskViews() {
         String query = controller.getSearchField().getText().trim().toLowerCase();
         String filter = controller.getCurrentCategoryFilter();
 
-        controller.getUncompletedListView().getItems().setAll(
-                controller.getTaskManager().getAllTasks().stream()
-                        .filter(t -> !t.isCompleted()
-                                && (filter.equals("全部") || t.getCategory().equals(filter))
-                                && (query.isEmpty() || t.getTitle().toLowerCase().contains(query)
-                                || t.getCategory().toLowerCase().contains(query)))
-                        .toList()
-        );
+        List<Task> uncompleted = controller.getTaskManager().getAllTasks().stream()
+                .filter(t -> !t.isCompleted()
+                        && (filter.equals("全部") || t.getCategory().equals(filter))
+                        && (query.isEmpty()
+                        || t.getTitle().toLowerCase().contains(query)
+                        || t.getCategory().toLowerCase().contains(query)))
+                .collect(Collectors.toList());
 
-        controller.getCompletedListView().getItems().setAll(
-                controller.getTaskManager().getAllTasks().stream()
-                        .filter(t -> t.isCompleted()
-                                && (filter.equals("全部") || t.getCategory().equals(filter))
-                                && (query.isEmpty() || t.getTitle().toLowerCase().contains(query)
-                                || t.getCategory().toLowerCase().contains(query)))
-                        .toList()
-        );
+        List<Task> completed = controller.getTaskManager().getAllTasks().stream()
+                .filter(t -> t.isCompleted()
+                        && (filter.equals("全部") || t.getCategory().equals(filter))
+                        && (query.isEmpty()
+                        || t.getTitle().toLowerCase().contains(query)
+                        || t.getCategory().toLowerCase().contains(query)))
+                .collect(Collectors.toList());
+
+        controller.getUncompletedListView().getItems().setAll(uncompleted);
+        controller.getCompletedListView().getItems().setAll(completed);
+        controller.getUncompletedListView().refresh();
+        controller.getCompletedListView().refresh();
+//        System.out.println("== ListView 比對 ==");
+//        System.out.println("UncompletedView: " + controller.getUncompletedListView());
+//        System.out.println("CompletedView: " + controller.getCompletedListView());
+//        System.out.println("是否為同一個物件？ " + (controller.getUncompletedListView() == controller.getCompletedListView()));
+
     }
 }
